ENYO-3998: FIx ExpandablePicker Truncated Picker Button Displays upon onClick

--- a/packages/moonstone/Button/Button.less
+++ b/packages/moonstone/Button/Button.less
@@ -46,7 +46,7 @@
 	min-width: @moon-button-height;
 	max-width: 300px;
 	padding: 0 @moon-button-h-padding;
-	margin: 0 @moon-button-h-margin;
+	margin: 1px @moon-button-h-margin;
 	color: @moon-button-text-color;
 	box-sizing: border-box;
 	z-index: 0;
